Use plex account to read the backup area

--- a/templates/rsyncd.conf.j2
+++ b/templates/rsyncd.conf.j2
@@ -6,3 +6,5 @@ log file = /var/log/rsync.log
 comment = Plex Data
 path = /var/lib/plexmediaserver/Library/Application Support/Plex Media Server
 read only = true
+uid = plex
+guid = plex
